fixed two css issues: one for the tab strip of Ext.TabPanel, and one for the alignment of td elements in the date picker (closes http://projects.opengeo.org/CAPRA/ticket/818)

--- a/src/geonode-client/src/theme/app/site.css
+++ b/src/geonode-client/src/theme/app/site.css
@@ -122,6 +122,15 @@ td.x-date-middle {
 padding: 4px;
 }
 
+ul.x-tab-strip {
+margin: 0;
+list-style-type: inherit;
+}
+
+label {
+font-weight: inherit;
+}
+
 /*-----------------------
 Layout
 -----------------------*/
